--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 
 <html>
 <head>
-<title>JS Démineur</title>
-<link rel="stylesheet" href="asset/css/style.css"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
-
+    <title>JS Démineur</title>
+    <link rel="stylesheet" href="asset/css/style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+    <meta charset="utf-8">
 </head>
 <body>
-    
+
 
 
 <script>
