--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>JS Démineur</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💣</text></svg>">
     <link rel="stylesheet" href="asset/css/style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
     <meta charset="utf-8">
